deploy/benchmark/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: benchmark
  namespace: benchmark
  labels:
    app.kubernetes.io/name: benchmark
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
       maxSurge: 1
       maxUnavailable: 1
  selector:
    matchLabels:
      app: benchmark
  template:
    metadata:
      labels:
        app: benchmark
    spec:
      containers:
        - name: app
          image: ghcr.io/cse-labs/heartbeat:0.1.0
          imagePullPolicy: Always
          args:
            - -u
            - /benchmark
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /healthz
              port: http
            initialDelaySeconds: 5
            failureThreshold: 10
            periodSeconds: 60
          readinessProbe:
            httpGet:
              path: /readyz
              port: http
            initialDelaySeconds: 5
            failureThreshold: 10
            periodSeconds: 5
          resources:
            requests:
              cpu: 200m
              memory: 64Mi
            limits:
              cpu: 400m
              memory: 128Mi
