deploy/benchmark/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: benchmark
  namespace: benchmark
spec:
  selector:
    app: benchmark

  type: ClusterIP
  ports:
    - port: 8080
      targetPort: http
      protocol: TCP
      name: http
