deploy/benchmark/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: benchmark
  namespace: benchmark
  annotations:
    kubernetes.io/ingress.class: contour
    cert-manager.io/cluster-issuer: letsencrypt-prod
    ingress.kubernetes.io/force-ssl-redirect: "true"

spec:
  tls:
  - secretName: benchmark
    hosts:
    - lab.aks-demo.com
  rules:
  - host: lab.aks-demo.com
    http:
      paths:
      - pathType: Prefix
        path: /benchmark
        backend:
          service:
            name: benchmark
            port:
              number: 8080
